implemented: inputFolder (new internal variable so that gnuclad can be executed from everywhere) implemented: getBaseFolder(std::string)

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 GNUCLAD TODO
 
+improve programming doc on config
+
 translatable strings (gettext)
 
 add option curvedConnectors ? (rather derivType)
