--- a/MANUAL/source/gnuclad-programming-quick.texi
+++ b/MANUAL/source/gnuclad-programming-quick.texi
@@ -6,9 +6,9 @@
 
 @gcindex Quickly adding things.
 
-This page serves as a quick reference for adding configuration options,
-generators and parsers.
-
+This page serves as a quick reference.
+More detailed information can be found in
+@ref{How to use config options and write a parser/generator,,the next chapter}.
 
 @c _______________________________________________________ ADDING CONFIG OPTIONS                        << to be revised
 
@@ -18,12 +18,12 @@ generators and parsers.
 When adding a configuration option, be sure to implement it at least in the
 following places:
 @itemize @bullet
-@item gnuclad.h declaration (members of the Cladogram class)
-@item gnuclad.cpp initialisation (in the constructor of the Cladogram object)
-@item gnuclad.cpp parser (in the parseOptions function)
-@item generatorCONF.cpp
-@item the texinfo documentation, chapter @ref{Config Options,,Config Options}
-      (insert the new config file created by generatorCONF)
+@item gnuclad.h: members of the Cladogram class (declaration)
+@item gnuclad.cpp: in the constructor of the Cladogram object (initialisation)
+@item gnuclad.cpp: in the parseOptions function
+@item generatorCONF.cpp: insert description of the new option
+@item the texinfo documentation, chapter @ref{Config Options,,Config Options}:
+      insert the new config file created by generatorCONF
 @item third party gnuclad configuration files you have access to
 @end itemize
 
@@ -38,7 +38,8 @@ declarations.
 
 Parsers read data from various sources into the Cladogram object.
 For detailed information,
-see @ref{How to code a parser/generator,,How to write a parser}.
+see @ref{How to use config options and write a parser/generator,,
+How to write a parser}.
 
 
 parserXXX.h:
@@ -73,7 +74,8 @@ add choser:
 
 Generators write data from the Cladogram object to a specified output format.
 For detailed information,
-see @ref{How to code a parser/generator,,How to write a generator}.
+see @ref{How to use config options and write a parser/generator,,
+How to write a generator}.
 
 
 generatorXXX.h:
@@ -90,7 +92,7 @@ generatorXXX.cpp:
 @example
 #include "generatorXXX.h"
 implement constructor and destructor
-implement writeData();
+implement writeData(Cladogram * clad, std::ofstream * fp);
 @end example
 
 gnuclad.cpp
