--- a/manual/source/gnuclad-tips.texi
+++ b/manual/source/gnuclad-tips.texi
@@ -4,19 +4,20 @@
 @node Usage Tips
 @chapter Usage Tips
 
-@section CSV spreadsheet as input
+@section Input: CSV => Output: SVG
 
-You can include SVG images in the CSV spreadsheets.
-Keep in mind that only the defs and drawing data (paths etc) are imported,
-NOT the header.
-If you think the default gnuclad SVG header is missing something, please file
+CSV spreadsheets can include SVG images, yet only the defs (gradients, etc) and
+drawing data (paths, shapes, etc) are imported, @emph{not the header}.@*
+This means that included images have to comply with the SVG XML used by
+gnuclad.@*
+If you think the current SVG header is missing something, please file
 a bug detailing the problem.
 
-You can also include PNG images in the CSV, but keep in mind that raster images
+CSV spreadsheets can also include PNG images, but keep in mind that raster images
 are encoded in base64 and may result in a really huge output file.
 
 
-@section CSV spreadsheet as output
+@section Output: CSV
 
 All nodes with a starting date newer than endOfTime (usually the current date)
 will be ignored.
