--- a/manual/source/gnuclad-about.texi
+++ b/manual/source/gnuclad-about.texi
@@ -45,17 +45,15 @@ gnuclad INPUTFILE OUTPUT[FORMAT|FILE] [CONFIGFILE]
 @cindex Getting Started
 @section Getting started
 
-If you downloaded the source code and don't know how to proceed, here are a
-few detailed instructions.
-
 gnuclad is built with the GNU toolchain, specifically g++ and GNU make.
 These are included in most GNU/Linux distributions and can be obtained
 from the Xcode developer package on OSX.
-On Windows, compilation works flawlessly with MinGW & MSYS, though it should be
+On Windows, compilation works flawlessly with MinGW & MSYS, though it may be
 possible with other compilers by tweaking the Makefile.
 
 To compile gnuclad, open the gnuclad main folder in a terminal and type:
 @example
+  ./configure
   make
 @end example
 
@@ -67,9 +65,9 @@ acquainted with it's syntax:
   ./gnuclad -h
 @end example
 
-Change to the example folder and generate your first SVG image:
+Change to the 'example' folder and generate your first SVG image:
 @example
-  cd ../EXAMPLE
+  cd ../example
   ../bin/gnuclad example.csv svg example.conf
 @end example
 
