--- a/manual/src/gnuclad.texi
+++ b/manual/src/gnuclad.texi
@@ -4,6 +4,8 @@
 @settitle gnuclad manual
 @c %**end of header
 
+@include version.texi
+
 @c _____________________________________________________ DESCRIPTION & COPYRIGHT
 
 @copying
@@ -24,7 +26,7 @@ Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 
 @titlepage
 @title gnuclad cladogram generator
-@subtitle version 0.1
+@subtitle version @value{VERSION}
 @author Donjan Rodic (@email{donjan@dyx.ch})
 @page
 @vskip 0pt plus 1filll
@@ -40,7 +42,7 @@ Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 
 @top gnuclad cladogram generator
 
-This is the Texinfo manual for gnuclad version 0.1 (14. February 2010)
+This is the Texinfo manual for gnuclad version @value{VERSION} (@value{UPDATED})
 
 @end ifnottex
 
