--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,4 +1,4 @@
-m4trace:configure.ac:4: -1- AC_INIT([gnuclad], [0.1], [bryonak at dyx dot ch])
+m4trace:configure.ac:4: -1- AC_INIT([gnuclad], [0.1.x], [bryonak at dyx dot ch])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -146,7 +146,7 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^host_alias$])
 m4trace:configure.ac:4: -1- AC_SUBST([target_alias])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^target_alias$])
-m4trace:configure.ac:5: -1- AM_INIT_AUTOMAKE([-Wall -Werror])
+m4trace:configure.ac:5: -1- AM_INIT_AUTOMAKE([-Wall])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.ac:5: -1- AM_AUTOMAKE_VERSION([1.11])
 m4trace:configure.ac:5: -1- AC_REQUIRE_AUX_FILE([install-sh])
