--- a/manual/src/gnuclad-about.texi
+++ b/manual/src/gnuclad-about.texi
@@ -14,73 +14,12 @@ You can also file bugs and contact the developers there.
 @section Purpose
 
 gnuclad has been written to facilitate progress of the GNU/Linux distro
-timeline project (GLDT) which can be found at @uref{http://futurist.se/gldt/}
+timeline project (GLDT).
 
 Meanwhile it has become quite customisable and general application -
 for example in genealogy or visualisation of hierarchical structures -
 should be possible.
 
-@section Formats
+@section Projects using gnuclad
 
-Supported input formats are: CSV spreadsheets
-
-Supported output formats are: CSV, SVG and CONF
-
-A sample CSV file is distributed together with gnuclad.
-It can be openend with any spreadsheet program; the field separator is
-comma (,) and the text delimiter is double quote ("). Please make sure you save
-it that way.
-
-The conf file can be edited with any text editor of your choice.
-
-@section Syntax
-
-@example
-gnuclad INPUTFILE OUTPUT[FORMAT|FILE] [CONFIGFILE]
-
-  example: gnuclad table.CSV SVG
-  example: gnuclad Data.csv result.csv alternative.conf
-@end example
-
-@cindex Getting Started
-@section Getting started
-
-gnuclad is built with the GNU toolchain, specifically g++ and GNU make.
-These are included in most GNU/Linux distributions and can be obtained
-from the Xcode developer package on OSX.
-On Windows, compilation works flawlessly with MinGW & MSYS, though it may be
-possible with other compilers by tweaking the Makefile.
-
-To compile gnuclad, open the gnuclad main folder in a terminal and type:
-@example
-  ./configure
-  make
-@end example
-
-This will produce a 'gnuclad' binary in the bin folder.
-Change to the bin folder and execute gnuclad to get
-acquainted with it's syntax:
-@example
-  cd bin
-  ./gnuclad -h
-@end example
-
-Change to the 'example' folder and generate your first SVG image:
-@example
-  cd ../example
-  ../bin/gnuclad example.csv svg example.conf
-@end example
-
-In order to install gnuclad on a POSIX conform system, change to the main
-directory:
-@example
-  cd ..
-  make install
-@end example
-
-You should now be able to call gnuclad from any folder.
-If you wish to uninstall gnuclad, simply open a terminal in that same
-main gnuclad folder and execute:
-@example
-  make uninstall
-@end example
+GNU/Linux distro timeline: @uref{http://futurist.se/gldt/}
