--- a/manual/src/version.texi
+++ b/manual/src/version.texi
@@ -1,4 +1,4 @@
 @set UPDATED 28 February 2010
 @set UPDATED-MONTH February 2010
-@set EDITION 0.1
-@set VERSION 0.1
+@set EDITION 0.1.x
+@set VERSION 0.1.x
