added small copyright notice to all supporting files

--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,11 @@
-Basic Installation
-==================
+Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without any warranty.
+
+________________________________________________________________________
 
 gnuclad is built with the GNU toolchain, specifically g++ and GNU make.
 These are included in most GNU/Linux distributions and can be obtained
