--- a/README
+++ b/README
@@ -1,5 +1,12 @@
-gnuclad README
-==============
+Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without any warranty.
+
+________________________________________________________________________
+
 
 gnuclad is a cladogram generator.
 The most recent version can be found at https://launchpad.net/gnuclad
