--- a/ToDo
+++ b/ToDo
@@ -1,7 +1,16 @@
-GNUCLAD TODO
+Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without any warranty.
+
 ________________________________________________________________________
 
-automake
+mv parsers/generators to parser/ and generator/ => shorten to CSV.cpp
+ and lowercase names?
+
+mv manual to doc?
 
 add non-conf-file cladogram options to manual? or just point to source
 improve programming manual on config options
